Added a component using GEMINI cli

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <button (click)="toggleSidebar()" class="toggle-btn">
       <i class="fas" [ngClass]="isCollapsed ? 'fa-angle-right' : 'fa-angle-left'"></i>
     </button>
-    <h2 *ngIf="!isCollapsed">Tools</h2>
+    <h2 *ngIf="!isCollapsed">AI CHAT</h2>
   </div>
 
   <ul class="sidebar-menu">
