--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -11,15 +11,15 @@
       <i class="fas fa-comments icon"></i>
       <span class="label" *ngIf="!isCollapsed">Chat</span>
     </li>
-    <li>
+    <li routerLink="/docs" routerLinkActive="active">
       <i class="fas fa-file-alt icon"></i>
       <span class="label" *ngIf="!isCollapsed">Docs</span>
     </li>
-    <li>
+    <li routerLink="/images" routerLinkActive="active">
       <i class="fas fa-image icon"></i>
       <span class="label" *ngIf="!isCollapsed">Images</span>
     </li>
-    <li>
+    <li routerLink="/settings" routerLinkActive="active">
       <i class="fas fa-cog icon"></i>
       <span class="label" *ngIf="!isCollapsed">Settings</span>
     </li>
