--- a/src/app/components/prompt-bar/prompt-bar.component.scss
+++ b/src/app/components/prompt-bar/prompt-bar.component.scss
@@ -2,6 +2,10 @@
   display: flex;
   padding: 10px;
   border-top: 1px solid #ccc;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
 }
 
 textarea {
