--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,27 +1,7 @@
-<nav class="sidebar" [ngClass]="{ 'collapsed': isCollapsed }">
-  <div class="sidebar-header">
-    <button (click)="toggleSidebar()" class="toggle-btn">
-      <i class="fas" [ngClass]="isCollapsed ? 'fa-angle-right' : 'fa-angle-left'"></i>
-    </button>
-    <h2 *ngIf="!isCollapsed">AI CHAT</h2>
-  </div>
-
-  <ul class="sidebar-menu">
-    <li routerLink="/" routerLinkActive="active">
-      <i class="fas fa-comments icon"></i>
-      <span class="label" *ngIf="!isCollapsed">Chat</span>
-    </li>
-    <li routerLink="/docs" routerLinkActive="active">
-      <i class="fas fa-file-alt icon"></i>
-      <span class="label" *ngIf="!isCollapsed">Docs</span>
-    </li>
-    <li routerLink="/images" routerLinkActive="active">
-      <i class="fas fa-image icon"></i>
-      <span class="label" *ngIf="!isCollapsed">Images</span>
-    </li>
-    <li routerLink="/settings" routerLinkActive="active">
-      <i class="fas fa-cog icon"></i>
-      <span class="label" *ngIf="!isCollapsed">Settings</span>
-    </li>
-  </ul>
-</nav>
+<nav>
+  <a routerLink="/"   routerLinkActive="active">Dashboard</a>
+  <a routerLink="/chat" routerLinkActive="active">Chat</a>
+  <a routerLink="/docs" routerLinkActive="active">Docs</a>
+  <a routerLink="/images" routerLinkActive="active">Images</a>
+  <a routerLink="/settings" routerLinkActive="active">Settings</a>
+</nav> 
