--- a/src/app/components/prompt-bar/prompt-bar.component.scss
+++ b/src/app/components/prompt-bar/prompt-bar.component.scss
@@ -2,10 +2,9 @@
   display: flex;
   padding: 10px;
   border-top: 1px solid #ccc;
-position: fixed;
-  bottom: 0;
   width: 100%;
   background-color: white;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
 }
 
 textarea {
